--- a/package.json
+++ b/package.json
@@ -16,17 +16,16 @@
     "dependencies": {
         "react-dnd": "^7.4.5",
         "react-contexify": "^4.1.0",
-        "react-dnd-html5-backend": "^7.4.4"
-    },
-    "peerDependencies": {
-        "classnames": "^2.2.6",
-        "font-awesome": "^4.7.0",
-        "primeicons": "^1.0.0",
-        "primereact": "^3.1.3",
+        "react-dnd-html5-backend": "^7.4.4",
+        "react-transition-group": "^4.0.1",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-transition-group": "^4.0.1"
+        "primeicons": "^1.0.0",
+        "font-awesome": "^4.7.0",
+        "classnames": "^2.2.6",
+        "primereact": "^3.1.3"
     },
+    "peerDependencies": {},
     "devDependencies": {
         "webpack": "4.29.6",
         "webpack-dev-server": "3.2.1",
