--- a/package.json
+++ b/package.json
@@ -11,22 +11,29 @@
         "build",
         "README.md"
     ],
-    "main": "./dist/lib/index.js",
+    "main": "./build/lib/index.js",
     "license": "MIT",
     "dependencies": {
         "react-dnd": "^7.4.5",
         "react-contexify": "^4.1.0",
         "react-dnd-html5-backend": "^7.4.4",
-        "react-transition-group": "^4.0.1",
+        "react-transition-group": "^4.0.1"
+    },
+    "peerDependencies": {
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "primeicons": "^1.0.0",
         "font-awesome": "^4.7.0",
         "classnames": "^2.2.6",
         "primereact": "^3.1.3"
-    },
-    "peerDependencies": {},
+	},
     "devDependencies": {
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "primeicons": "^1.0.0",
+        "font-awesome": "^4.7.0",
+        "classnames": "^2.2.6",
+        "primereact": "^3.1.3",
         "webpack": "4.29.6",
         "webpack-dev-server": "3.2.1",
         "webpack-manifest-plugin": "2.0.4",
