--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
         "classnames": "^2.2.6",
         "font-awesome": "^4.7.0",
         "moment": "^2.24.0",
+        "node-sass": "^4.12.0",
+        "primeflex": "^1.0.0-rc.1",
         "primeicons": "^1.0.0",
         "primereact": "^3.1.3",
         "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-transition-group": "^4.0.1",
         "react-contexify": "^4.1.0",
         "react-dnd": "^7.4.5",
-        "react-dnd-html5-backend": "^7.4.4"
+        "react-dnd-html5-backend": "^7.4.4",
+        "react-dom": "^16.8.6",
+        "react-scripts": "^3.0.1",
+        "react-transition-group": "^4.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
