--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "url": "https://github.com/shridhar-tl/js-report-builder"
     },
     "dependencies": {
+        "axios": "^0.19.0",
         "chart.js": "^2.8.0",
         "classnames": "^2.2.6",
         "font-awesome": "^4.7.0",
