--- a/package.json
+++ b/package.json
@@ -1,20 +1,46 @@
 {
     "name": "jsd-report",
-    "version": "0.1.6",
+    "version": "0.1.7",
     "author": "Shridhar TL",
-    "description": "A Report Builder component which can be used by end users with minimal technical knowledge to built custom reports from browser.",
+    "description": "A Report Builder component which can be used by end users with minimal technical knowledge to built custom reports from browser. Supports generating charts, custom components, filters, custom functions and lot more.",
     "repository": {
         "type": "git",
         "url": "https://github.com/shridhar-tl/js-report-builder"
     },
+    "keywords": [
+        "advanced",
+        "dynamic",
+        "custom",
+        "user",
+        "runtime",
+        "browser",
+        "react",
+        "javascript",
+        "report",
+        "builder",
+        "component",
+        "engine",
+        "visualizer",
+        "generator",
+        "analytics",
+        "chart",
+        "script",
+        "report builder",
+        "advanced report",
+        "dynamic report",
+        "custom report",
+        "browser report",
+        "user report",
+        "runtime report",
+        "simple"
+    ],
     "files": [
         "build",
         "README.md"
     ],
     "main": "./build/index.js",
     "license": "MIT",
-    "dependencies": {
-    },
+    "dependencies": {},
     "peerDependencies": {
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
@@ -30,6 +56,7 @@
         "@svgr/webpack": "4.1.0",
         "@typescript-eslint/eslint-plugin": "1.6.0",
         "@typescript-eslint/parser": "1.6.0",
+        "axios": "^0.19.0",
         "babel-eslint": "10.0.1",
         "babel-jest": "^24.8.0",
         "babel-loader": "8.0.5",
@@ -37,7 +64,6 @@
         "babel-preset-react-app": "^9.0.0",
         "camelcase": "^5.2.0",
         "case-sensitive-paths-webpack-plugin": "2.2.0",
-        "axios": "^0.19.0",
         "chart.js": "^2.8.0",
         "classnames": "^2.2.6",
         "css-loader": "2.1.1",
@@ -80,6 +106,7 @@
         "react-dnd": "^9.3.4",
         "react-dnd-html5-backend": "^9.3.4",
         "react-dom": "^16.9.0",
+        "react-transition-group": "^4.2.1",
         "resolve": "1.10.0",
         "sass-loader": "7.1.0",
         "semver": "6.0.0",
@@ -88,10 +115,11 @@
         "ts-pnp": "1.1.2",
         "url-loader": "1.1.2",
         "webpack": "4.29.6",
+        "webpack-bundle-analyzer": "^3.5.0",
         "webpack-dev-server": "3.2.1",
         "webpack-manifest-plugin": "2.0.4",
-        "workbox-webpack-plugin": "4.2.0",
-        "react-transition-group": "^4.2.1"
+        "webpack-node-externals": "^1.7.2",
+        "workbox-webpack-plugin": "4.2.0"
     },
     "scripts": {
         "start": "node scripts/start.js",
