--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "chart.js": "^2.8.0",
         "classnames": "^2.2.6",
         "font-awesome": "^4.7.0",
+        "jquery": "^3.4.1",
         "moment": "^2.24.0",
         "node-sass": "^4.12.0",
         "primeflex": "^1.0.0-rc.1",
