--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jsd-report",
-    "version": "0.1.0",
+    "version": "0.1.8",
     "author": "Shridhar TL",
     "description": "A Report Builder component built using JavaScript which runs on browser.",
     "repository": {
@@ -8,22 +8,22 @@
         "url": "https://github.com/shridhar-tl/js-report-builder"
     },
     "dependencies": {
-        "axios": "^0.19.0",
+        "axios": "^0.19.2",
         "chart.js": "^2.8.0",
         "classnames": "^2.2.6",
         "font-awesome": "^4.7.0",
         "jquery": "^3.4.1",
         "moment": "^2.24.0",
         "node-sass": "^4.12.0",
-        "primeflex": "^1.0.0-rc.1",
+        "primeflex": "^1.0.0",
         "primeicons": "^2.0.0",
-        "primereact": "^3.1.8",
-        "react": "^16.9.0",
-        "react-dnd": "^9.3.4",
-        "react-dnd-html5-backend": "^9.3.4",
-        "react-dom": "^16.9.0",
-        "react-scripts": "^3.1.1",
-        "react-transition-group": "^4.2.1"
+        "primereact": "^4.1.2",
+        "react": "^16.13.1",
+        "react-dnd": "^10.0.2",
+        "react-dnd-html5-backend": "^10.0.2",
+        "react-dom": "^16.13.1",
+        "react-scripts": "^3.4.1",
+        "react-transition-group": "^4.3.0"
     },
     "scripts": {
         "start": "react-scripts start",
