--- a/package.json
+++ b/package.json
@@ -1,23 +1,50 @@
 {
     "name": "jsd-report",
-    "version": "0.1.8",
+    "version": "0.1.10",
     "author": "Shridhar TL",
-    "description": "A Report Builder component built using JavaScript which runs on browser.",
+    "description": "A Report Builder component which can be used by end users with minimal technical knowledge to built custom reports from browser. Supports generating charts, custom components, filters, custom functions and lot more.",
     "repository": {
         "type": "git",
         "url": "https://github.com/shridhar-tl/js-report-builder"
     },
+    "keywords": [
+        "advanced",
+        "dynamic",
+        "custom",
+        "user",
+        "runtime",
+        "browser",
+        "react",
+        "javascript",
+        "report",
+        "builder",
+        "component",
+        "engine",
+        "visualizer",
+        "generator",
+        "analytics",
+        "chart",
+        "script",
+        "report builder",
+        "advanced report",
+        "dynamic report",
+        "custom report",
+        "browser report",
+        "user report",
+        "runtime report",
+        "simple"
+    ],
     "dependencies": {
         "axios": "^0.27.2",
-        "chart.js": "^3.7.1",
+        "chart.js": "^3.8.0",
         "classnames": "^2.3.1",
         "font-awesome": "^4.7.0",
         "jquery": "^3.6.0",
         "moment": "^2.29.3",
         "node-sass": "^7.0.1",
-        "primeflex": "^3.2.0",
+        "primeflex": "^3.2.1",
         "primeicons": "^5.0.0",
-        "primereact": "^8.1.0",
+        "primereact": "^8.1.1",
         "react": "^18.1.0",
         "react-dnd": "^14.0.2",
         "react-dnd-html5-backend": "^14.0.0",
