--- a/package.json
+++ b/package.json
@@ -43,19 +43,19 @@
         "simple"
     ],
     "dependencies": {
-        "axios": "^1.3.4",
-        "chart.js": "^4.2.1",
+        "axios": "^1.4.0",
+        "chart.js": "^4.3.3",
         "classnames": "^2.3.2",
-        "font-awesome": "^4.7.0",
-        "jquery": "^3.6.4",
+        "@fortawesome/fontawesome-free": "^6.4.2",
+        "jquery": "^3.7.0",
         "moment": "^2.29.4",
-        "node-sass": "^8.0.0",
-        "primeflex": "^3.3.0",
+        "sass": "^1.64.2",
+        "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
-        "primereact": "^8.7.3",
+        "primereact": "^9.6.1",
         "react": "^18.2.0",
-        "react-dnd": "^14.0.2",
-        "react-dnd-html5-backend": "^14.0.0",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.2.0",
         "react-scripts": "^5.0.1",
         "react-transition-group": "^4.4.5"
